Table posts {
  id bigint [pk, increment]
  author_name text [not null]
  title text [not null]
  body text [not null]
  comments_enabled boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (created_at, id) [name: 'posts_created_at_id_idx']
  }
}

Table comments {
  id bigint [pk, increment]
  post_id bigint [not null, ref: > posts.id]
  parent_id bigint [ref: > comments.id, note: 'parent comment must belong to the same post']
  author_name text [not null]
  body text [not null, note: 'max 2000 chars']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (post_id, id) [unique, name: 'comments_post_id_id_unique']
    (post_id, created_at, id) [name: 'comments_roots_page_idx']
    (post_id, parent_id, created_at, id) [name: 'comments_replies_page_idx']
  }
}
